--- a/index.html
+++ b/index.html
@@ -9,7 +9,24 @@
 </head>
 <body>
     <div class="box">
-        <div class="form"></div>
+        <div class="form">
+            <h2>Sign In</h2>
+            <div class="inputBox">
+                <input type="text" required="required">
+                <span>Username</span>
+                <i></i>
+            </div>
+            <div class="inputBox">
+                <input type="password" required="required">
+                <span>Password</span>
+                <i></i>
+            </div>
+            <div class="links">
+                <a href="#">forgot Password</a>
+                <a href="#">signup</a>
+            </div>
+            <input type="submit" value="Login">
+        </div>
     </div>
 </body>
 </html>
