--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <div class="box">
         <div class="form">
+            <h1 class="h1">Weclome back</h1>
             <h2>Sign In</h2>
             <div class="inputBox">
                 <input type="text" required="required">
@@ -23,7 +24,7 @@
             </div>
             <div class="links">
                 <a href="#">forgot Password</a>
-                <a href="#">signup</a>
+                <a href="SignUP.html">signup</a>
             </div>
             <input type="submit" value="Login">
         </div>
