--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <a href="#">forgot Password</a>
                 <a href="SignUP.html">signup</a>
             </div>
-            <input type="submit" value="Login">
+            <a href="Singout.html"> <input type="submit"  value="Login"></a>  
         </div>
     </div>
 </body>
