add some styles

--- a/Singout.html
+++ b/Singout.html
@@ -11,7 +11,7 @@
     <div>
         <h1 class="Dashbord">Welcome to our website</h1>
         <div class="Logout">
-            <a href="index.html"><input type="submit" value="Sing Out"></a>
+            <a href="index.html"><input class="input" type="submit" value="Sing Out"></a>
         </div>
     </body>
     </div>
