--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <i></i>
             </div>
             <div class="links">
-                <a href="#">forgot Password</a>
+                <a href="forgot_password.html">forgot Password ?</a>
                 <a href="SignUP.html">signup</a>
             </div>
             <a href="Singout.html"> <input type="submit"  value="Login"></a>  
