--- a/forgot_password.html
+++ b/forgot_password.html
@@ -8,16 +8,13 @@
     <link rel="stylesheet" href="./Forgot_Password.css">
 </head>
 <body>
-    <div class="nav">
-        <ul>
-            <li id="icon"><a href="index.html">Home</a></li>
-            <li id="try"><a href="index.html">Login</a></li>
-            <li id="try"><a href="SignUP.html">SignUP</a></li>
-        </ul>
-    </div>
-    <div class="F_password">
-        <h2>Weclome</h2>
-        <p></p>
-    </div>
+    <header class="header">
+        <h2 class="Logo">Logo</h2>
+        <nav class="navbar">
+            <a href="SignUP.html"><button class="btn
+                ">Sign up</button></a>
+            <a href="index.html"><button class="btn">Login</button></a>
+        </nav>
+    </header>
 </body>
 </html>
