--- a/forgot_password.html
+++ b/forgot_password.html
@@ -9,12 +9,26 @@
 </head>
 <body>
     <header class="header">
-        <h2 class="Logo">Logo</h2>
         <nav class="navbar">
             <a href="SignUP.html"><button class="btn
                 ">Sign up</button></a>
             <a href="index.html"><button class="btn">Login</button></a>
         </nav>
     </header>
+    <div class="body2">
+        <div class="box">
+            <div class="forgot_password_form">
+                <div class="input">
+                    <div class="input">
+                        <p>Enter your E-mail address</p>
+                    <input type="email" required="required">
+                    <span>E-mail</span>
+                    <i></i>
+                    </div>
+                        <input type="submit" value="Submit">
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
