--- a/forgot_password.html
+++ b/forgot_password.html
@@ -18,14 +18,14 @@
     <div class="body2">
         <div class="box">
             <div class="forgot_password_form">
+                <p>Enter your E-mail address</p>
                 <div class="input">
-                    <div class="input">
-                        <p>Enter your E-mail address</p>
+                    <div class="inputs">
                     <input type="email" required="required">
-                    <span>E-mail</span>
-                    <i></i>
                     </div>
+                    <div class="buttom">
                         <input type="submit" value="Submit">
+                    </div>
                 </div>
             </div>
         </div>
