--- a/index.html
+++ b/index.html
@@ -23,10 +23,15 @@
                 <i></i>
             </div>
             <div class="links">
-                <a href="forgot_password.html">forgot Password ?</a>
-                <a href="SignUP.html">signup</a>
+               <a href=""><label><input type="checkbox"> Remember Me</label></a>
+                <a href="forgot_password.html"><p>forgot Password ?</p></a>
             </div>
-            <a href="Singout.html"> <input type="submit"  value="Login"></a>  
+            <a href="Singout.html"> <input type="submit"  value="Login"></a>
+            <div class="sign_up">
+                <p>You don't have an account?
+                    <a href="SignUP.html">Registration</a>
+                </p>
+            </div>
         </div>
     </div>
 </body>
