adjust some size(Login_form)

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
             <h1 class="h1">Weclome back</h1>
             <h2>Sign In</h2>
             <div class="inputBox">
-                <input type="text" required="required">
-                <span>Username</span>
+                <input type="email" required="required">
+                <span>E-mail</span>
                 <i></i>
             </div>
             <div class="inputBox">
