modify some codes

--- a/SignUP.html
+++ b/SignUP.html
@@ -38,7 +38,7 @@
                     <i></i>
                 </div>
                 <div class="links2">
-                    <a href="index.html">signIn</a>
+                    <a href="index.html">Login</a>
                 </div>
                 <input type="submit" value="signIn">
             </div>
