adjust some size

--- a/SignUP.html
+++ b/SignUP.html
@@ -38,9 +38,13 @@
                     <i></i>
                 </div>
                 <div class="links2">
-                    <a href="index.html">Login</a>
+                    <input class="checkbox" type="checkbox">
+                <label>I agree to the terms & conditions</label>
                 </div>
-                <input type="submit" value="signIn">
+                <input type="submit" value="Register">
+                <div class="Login_registration">
+                    <p>Already have an account? <a href="index.html">Login</a></p>
+                </div>
             </div>
             </div>
         </div>
