second design(forgoy_password page)

--- a/forgot_password.html
+++ b/forgot_password.html
@@ -18,13 +18,17 @@
     <div class="body2">
         <div class="box">
             <div class="forgot_password_form">
+                <div class="paragraph">
+                    <h2>Forgot your password</h2>
+                    <p>Please enter the email address you'd like your password reset information sent to</p>
+                </div>
                 <p>Enter your E-mail address</p>
                 <div class="input">
                     <div class="inputs">
                     <input type="email" required="required">
                     </div>
                     <div class="buttom">
-                        <input type="submit" value="Submit">
+                        <input type="submit" value="Request resent link">
                     </div>
                 </div>
             </div>
