start design css page(home page)

--- a/home_page.html
+++ b/home_page.html
@@ -6,8 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home_page</title>
     <link rel="shortcut icon" href="logo_.png">
+    <link rel="stylesheet" href="home_page.css">
 </head>
 <body>
-    
+    <header class="header">
+        <div class="logo">
+            <p href="#">Logo</p>
+        </div>
+        <nav class="navbar">
+            <a href="#">Home</a>
+            <a href="#">About Us</a>
+            <a href="index.html"><input type="submit" value="Login"></a>
+            <a href="SignUP.html"><input type="submit" value="Registration" ></a>
+        </nav>
+    </header>
 </body>
 </html>
