--- a/home_page.html
+++ b/home_page.html
@@ -15,10 +15,12 @@
         </div>
         <nav class="navbar">
             <a href="#">Home</a>
-            <a href="#">About Us</a>
+            <a href="#">Contact Us</a>
+            <a href="#">About us</a>
             <a href="index.html"><input type="submit" value="Login"></a>
             <a href="SignUP.html"><input type="submit" value="Registration" ></a>
         </nav>
     </header>
+
 </body>
 </html>
