starting body part (home_page)

--- a/home_page.html
+++ b/home_page.html
@@ -21,6 +21,9 @@
             <a href="SignUP.html"><input type="submit" value="Registration" ></a>
         </nav>
     </header>
-
+    <div class="home_page__body">
+        <p> ipsum dolor sit amet consectetur adipisicing elit. At aut sint numquam reiciendis non ex blanditiis distinctio deleniti consectetur nihil maxime obcaecati quas amet repellendus, perspiciatis mollitia commodi magni sequi explicabo aliquid quo accusantium sit? Sunt vel excepturi, deleniti minus incidunt ut est ullam adipisci quod reiciendis sint soluta. Assumenda maiores quos sunt, asperiores iste omnis obcaecati aliquid sapiente odio necessitatibus, blanditiis accusamus, ut facilis quae eum incidunt dolor repellendus voluptate ea reprehenderit illum aut quasi? Quo dolores totam architecto praesentium tempora ullam perferendis explicabo modi vero dolore provident, placeat vitae ipsam dolor voluptate culpa sit quae exercitationem odit autem?
+        </p>
+    </div>
 </body>
 </html>
