--- a/home_page.html
+++ b/home_page.html
@@ -24,10 +24,13 @@
     <div class="home_body">
         <div class="box">
             <div class="home_page_body">
-                <h3 class="presetation">
-                    Weclome to our Website
-                </h3>
-            </div>
+                <ul>
+                    <li id="first_li">
+                        Welcome to our web site
+                    </li>
+                    <li id="second_li">Web Design</li>
+                    <li id="last_li">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quo odit rerum in mollitia fuga possimus quidem aliquam id nisi enim aliquid nesciunt ad tempora, vero, ullam, repudiandae vel at. Sunt!</li>
+                </ul>
         </div>
     </div>
 </body>
